--- a/index.html
+++ b/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valentines Day '24</title>
+    <style>
+    html{
+        background-color: antiquewhite;
+        font-family: "Protest Riot", sans-serif;
+    }
+    h1{
+        text-align: left;
+    }
+    h2{
+        text-align: center;
+        font-family: "Protest Riot", sans-serif;
+        font-size: 200%;
+    }    
+    img.animated-gif{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 20%;
+    }
+    img.not_really_an_option{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+    }
+    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Protest+Riot&display=swap" rel="stylesheet">
 </head>
 <body>
+    <img class="animated-gif" src="./love-heart.gif">
     <h1>Hey luv!</h1>
-    <h2>Will you be my valenines?</h2>
+    <h2>Will you be my valentines?</h2>
+    <a href="./yes.html"><img class="not_really_an_option" src="./yes-removebg-preview.png" alt="yes"></a>
+    <a href="./yes2.html"><img class="not_really_an_option" src="./yes__1_-removebg-preview.png"></a>
 </body>
 </html>
