--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 70%;
+        width: 80%;
     }
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -37,7 +37,7 @@
 <body>
     <img class="animated-gif" src="./love-heart.gif">
     <h1>Hey luv!</h1>
-    <h2>Will you be my valentines?</h2>
+    <h2>Will you be my valentine?</h2>
     <a href="./yes.html"><img class="not_really_an_option" src="./yes-removebg-preview.png" alt="yes"></a>
     <a href="./yes2.html"><img class="not_really_an_option" src="./yes__1_-removebg-preview.png"></a>
 </body>
