--- a/yes.html
+++ b/yes.html
@@ -12,6 +12,12 @@
     h1{
         text-align: center;
     }
+    img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 40%;
+    }
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,5 +26,6 @@
 <body>
     <br><br><br><br><br><br>
     <h1><a href="./rose.html">YAY!</a></h1>
+    <img src="./moti-hearts.gif">
 </body>
 </html>
