--- a/yes2.html
+++ b/yes2.html
@@ -12,6 +12,12 @@
     h1,h2{
         text-align: center;
     }
+    img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 40%;
+    }
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,5 +27,6 @@
     <br><br><br><br><br><br>
     <h1><a href="./rose.html">yay</a></h1>
     <h2>Had to read further than the first button, but still, yay.</h2>
+    <img src="./moti-hearts.gif">
 </body>
 </html>
