--- a/rose.html
+++ b/rose.html
@@ -15,10 +15,15 @@
         margin-right: auto;
         width: 90%;
     }
+    h1{
+        color: antiquewhite;
+        text-align: center;
+    }
     </style>
 </head>
 <body>
     <br><br><br><br>
     <img src="./rose.gif">
+    <h1>You were my yesterday.<br>You are my today.<br>Be my tomorrow.</h1>
 </body>
 </html>
