--- a/rose.html
+++ b/rose.html
@@ -7,7 +7,6 @@
     <style>
       html{
         background-color: black;
-        font-family: "Protest Riot", sans-serif;
     }
     img{
         display: block;
@@ -19,7 +18,16 @@
         color: antiquewhite;
         text-align: center;
     }
+    h1{
+        color: antiquewhite;
+        text-align: center;
+        font-family: "Kalam", cursive;
+        font-weight: 50;
+    }
     </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Indie+Flower&family=Kalam:wght@300;400;700&family=Protest+Riot&display=swap" rel="stylesheet">
 </head>
 <body>
     <br><br><br><br>
