--- a/rose.html
+++ b/rose.html
@@ -32,6 +32,6 @@
 <body>
     <br><br><br><br>
     <img src="./rose.gif">
-    <h1>You were my yesterday, my today, and I hope you'll be my tomorrow too.</h1>
+    <h1>You were my yesterday.<br>You are my today.<br>Be my tomorrow.</h1>
 </body>
 </html>
