--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
         margin-right: auto;
         width: 80%;
     }
+    .sub_div {
+        position: absolute;
+        bottom: 0px;
+        background-color: #b54f68;
+        color: #ffffff;
+    }
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,5 +46,7 @@
     <h2>Will you be my valentine?</h2>
     <a href="./yes.html"><img class="not_really_an_option" src="./yes-removebg-preview.png" alt="yes"></a>
     <a href="./yes2.html"><img class="not_really_an_option" src="./yes__1_-removebg-preview.png"></a>
+            <marquee class="sub_div">---- made by krishna ----</marquee>
+
 </body>
 </html>
